[gd_scene load_steps=23 format=3 uid="uid://dsbj0ecnkoa4m"]

[ext_resource type="Script" path="res://assets/characters/scripts/character.gd" id="1_7iiwt"]
[ext_resource type="PackedScene" uid="uid://dxnwad4fyiqqc" path="res://core/states/core/state_machine.tscn" id="2_550gp"]
[ext_resource type="Script" path="res://assets/characters/scripts/character_stats.gd" id="2_g6ihf"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_xo8fg"]
[ext_resource type="PackedScene" uid="uid://dscf8c60pu3d4" path="res://core/states/core/state.tscn" id="3_ljg6w"]
[ext_resource type="Script" path="res://core/states/character_states/idle.gd" id="4_c2pic"]
[ext_resource type="Script" path="res://core/classes/particle_spawner/particle_spawner.gd" id="4_os5i5"]
[ext_resource type="Script" path="res://core/states/behavior_2d_states/no_input.gd" id="5_1m0ex"]
[ext_resource type="PackedScene" uid="uid://cpw6fmni27ysh" path="res://assets/items/pick_up/default_throw_item_particles.tscn" id="5_3h8j8"]
[ext_resource type="Script" path="res://core/classes/audio_stream_player_2d_extended.gd" id="5_4hnw2"]
[ext_resource type="AudioStream" uid="uid://bd62e81wjpwwd" path="res://assets/items/pick_up/throw_item.wav" id="5_evkny"]
[ext_resource type="Script" path="res://core/states/character_states/run.gd" id="5_q4uhh"]
[ext_resource type="Script" path="res://core/states/character_states/air.gd" id="6_d0dbr"]
[ext_resource type="Script" path="res://core/states/behavior_2d_states/move_direction.gd" id="6_yk730"]
[ext_resource type="Script" path="res://core/states/behavior_2d_states/move_to_position.gd" id="7_jo6qf"]
[ext_resource type="PackedScene" uid="uid://cckn3gvlx808k" path="res://assets/characters/scripts/character_hud.tscn" id="9_dm5po"]
[ext_resource type="Script" path="res://core/states/character_states/play_animation.gd" id="9_kan2l"]
[ext_resource type="Script" path="res://assets/characters/scripts/target_manager.gd" id="11_bqsqr"]
[ext_resource type="Script" path="res://core/states/core/state.gd" id="11_hb3w8"]
[ext_resource type="Script" path="res://core/input_buffer.gd" id="13_gxgy6"]
[ext_resource type="Script" path="res://assets/characters/scripts/soft_collision.gd" id="14_kjlhh"]
[ext_resource type="Script" path="res://core/states/character_states/flinch.gd" id="18_3dqgy"]

[node name="Actor2d" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 99
script = ExtResource("1_7iiwt")

[node name="CharacterStats" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_g6ihf")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
visible = false

[node name="BackgroundJumpArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2d" type="CollisionShape2D" parent="BackgroundJumpArea"]

[node name="Inner" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Visuals" type="Node2D" parent="Inner"]
script = ExtResource("2_xo8fg")
target = NodePath("../..")
flags = 51

[node name="Hurtbox" type="Area2D" parent="Inner"]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2d" type="CollisionShape2D" parent="Inner/Hurtbox"]

[node name="ThrowItemParticlesSpawner" type="Marker2D" parent="Inner"]
unique_name_in_owner = true
script = ExtResource("4_os5i5")
particles_scene = ExtResource("5_3h8j8")

[node name="ThrowItemSfx" type="AudioStreamPlayer2D" parent="Inner/ThrowItemParticlesSpawner"]
unique_name_in_owner = true
stream = ExtResource("5_evkny")
bus = &"Sfx"
script = ExtResource("5_4hnw2")
streams = Array[AudioStream]([ExtResource("5_evkny")])
pitch_scale_min = 0.9
pitch_scale_max = 1.1

[node name="InputStateMachine" parent="." instance=ExtResource("2_550gp")]
unique_name_in_owner = true
reset_state_name = "NoInput"

[node name="NoInput" type="Node" parent="InputStateMachine"]
script = ExtResource("5_1m0ex")

[node name="MoveDirection" type="Node" parent="InputStateMachine"]
script = ExtResource("6_yk730")

[node name="MoveToPosition" type="Node" parent="InputStateMachine"]
script = ExtResource("7_jo6qf")

[node name="StateMachine" parent="." instance=ExtResource("2_550gp")]
unique_name_in_owner = true
reset_state_name = "Idle"

[node name="Cutscene" type="Node" parent="StateMachine"]
script = ExtResource("11_hb3w8")

[node name="Idle" parent="StateMachine" instance=ExtResource("3_ljg6w")]
script = ExtResource("4_c2pic")
animation = "idle"
coyote_time = 0.1
can_flinch = true

[node name="Run" parent="StateMachine" instance=ExtResource("3_ljg6w")]
script = ExtResource("5_q4uhh")
animation = "run"
coyote_time = 0.1
can_flinch = true

[node name="Air" parent="StateMachine" instance=ExtResource("3_ljg6w")]
script = ExtResource("6_d0dbr")
jump_animation = null
fall_animation = null
background_jump_animation = null
background_fall_animation = null
falling_gravity_multiplier = null
jump_buffer_time = null
jump_speed_boost = null
can_flinch = true

[node name="Defeat" type="Node" parent="StateMachine"]
script = ExtResource("9_kan2l")

[node name="Flinch" type="Node" parent="StateMachine"]
script = ExtResource("18_3dqgy")
can_flinch = true

[node name="CharacterHUDSmoothingNode" type="Node2D" parent="."]
script = ExtResource("2_xo8fg")
target = NodePath("..")
flags = 51

[node name="CharacterHUD" parent="CharacterHUDSmoothingNode" instance=ExtResource("9_dm5po")]
unique_name_in_owner = true

[node name="TargetManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_bqsqr")

[node name="InputBuffer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("13_gxgy6")

[node name="SoftCollision" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("14_kjlhh")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
